[tool.poetry]
name = "decision-making-app"
version = "0.1.0"
description = ""
authors = ["hrimov <andrew.hrimov@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.scripts]
api = "src.app.__main__:run"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = { extras = ["standard"], version = "^0.23.2" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.21" }
alembic = "^1.12.0"
orjson = "^3.9.7"
psycopg = { extras = ["c"], version = "^3.1.14" }
aio-pika = "^9.3.0"
aioboto3 = "12.1.0"
types-aioboto3-lite = { extras = ["essential"], version = "^12.1.0" }
types-aiobotocore-lite = { extras = ["s3"], version = "^2.9.0" }

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-order = "^1.2.0"
testcontainers = {extras = ["postgresql", "rabbitmq"], version = "^3.7.1"}
testcontainers-minio = "^0.0.1rc1"  # for now, it's a separate package


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.11"
mypy = "^1.5.1"


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-vv --order-scope=module"


[tool.mypy]
explicit_package_bases = true


[tool.ruff]
select = ["ALL"]
ignore = ["A003", "ANN", "D", "FA100", "FA102", "FIX", "I", "PGH003", "PGH004", "TD"]

[tool.ruff.extend-per-file-ignores]
"src/app/infrastructure/database/migrations/versions/*" = ["ALL"]
"tests/*" = ["ARG001", "F401", "PT003", "PT004", "S"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
